# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.273 2005/06/16 13:40:01 wolf31o2 Exp $

  16 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Fixing some bootloader isolinux/boot stuff for x86/amd64.

  14 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Change portage emerge to use --oneshot --nodeps to keep from merging the
  same packages multiple times.

  14 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage2/stage2-chroot.sh:
  Added a -p bootstrap when catalyst is called with -V (verbose).

  10 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Removed inittab hack, as this is done by livecd-tools.

  09 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/minimal.motd.txt, livecd/files/universal.motd.txt:
  Revert sync for bug #86914.  Yeah... I need to pay more attention sometimes.

  09 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/files/README.txt, -livecd/files/environmental.motd.txt,
  -livecd/files/gentoo.png, +livecd/files/livecd.motd.txt,
  livecd/files/livecd-bash_profile, livecd/files/livecd-bashrc,
  livecd/files/minimal.motd.txt, livecd/files/universal.motd.txt,
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Removed gentoo.png and creation of face directory. Changed
  livecd-bash_profile to source root's .bashrc. Sync motd files with catalyst
  1.1.10_pre4.

  02 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/support/chroot-functions.sh:
  Added setup_binutils function and force both of them to run during stage1
  cleanup.

  01 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Added livecd/volid explanation to example spec.
